# miniclima

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  PROTOCOL.md  README.md  docker-compose.yml  justfile  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/api/: connection.py  main.py  poll.py  prometheus.py  store.py
apps/cli/: pyproject.toml
apps/cli/src/cli/: main.py
captures/: raw_dump.txt  raw_dump_2.txt  raw_dump_2_260331.txt  raw_dump_2_struct.txt  serial_capture.txt  serial_capture3.txt  serial_capture4.txt  serial_capture_0205_1.txt  serial_capture_2.txt  serial_capture_5.txt
docs/: SNIFFING_PLAN.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  types.ts
frontend/app/components/: AppFooter.tsx  AppHeader.tsx  Cell.tsx  Controls.tsx  Dashboard.tsx  ExportModal.tsx  FilterTimer.tsx  GrafanaPanel.tsx  HumidityGauge.tsx  LoadingOverlay.tsx  ReadingsGrid.tsx  SettingsModal.tsx  SettingsPanel.tsx  ThemeToggle.tsx
frontend/app/lib/: export.ts
grafana/dashboards/json/: miniclima_ebc10.json
prometheus/: prometheus.yml
src/: client.py  cmd_enum.py  ebc10.py  protocol.py  relay.py
tools/: decode.py  logger.py  probe_rhc.py  relay.py  rex_monitor.py  test_setpoint.py
