[project]
name = "miniclima-cli"
version = "0.1.0"
description = "miniClima EBC10 CLI client"
requires-python = ">=3.10"
dependencies = [
    "ebc10",
]

[project.scripts]
ebc10 = "cli.main:main"

[tool.uv.sources]
ebc10 = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
